fixed tooltip of object UI ggetting behind viewport

--- a/src/Components/Setup/ConfigUI/ObjectUI/index.scss
+++ b/src/Components/Setup/ConfigUI/ObjectUI/index.scss
@@ -1,3 +1,7 @@
+.object-ui-container{
+  max-width: 90vw;
+  min-width: 70vw;
+}
 .text-on-panel {
   background: #fff none repeat scroll 0 0;
   height: auto;
